<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_basic_information">Basic Information</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_experience">Experience</string>
    <string name="menu_knowledge">Knowledge</string>
    <string name="menu_share">Share</string>



    <string name="item_experience_company">Company:</string>
    <string name="item_experience_project_or_customer">Project:</string>
    <string name="item_experience_role">Role:</string>
    <string name="item_experience_period">Period:</string>
    <string name="item_experience_completed_tasks">Completed Tasks</string>
    <string name="item_experience_used_tools">Used Tools</string>
</resources>
