
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp"
    android:layout_margin="4dp"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingEnd="8dp"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    android:background="@color/white"
    android:id="@+id/item_layout">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/table_background"
        >


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix"
            android:text="@string/item_experience_company"/>


        <TextView
            android:id="@+id/item_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="start"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:text="@string/item_experience_project_or_customer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />


        <TextView
            android:id="@+id/item_proyect_or_customer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="start"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            tools:ignore="MissingPrefix"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:background="@drawable/table_background"
        >


        <TextView
            android:text="@string/item_experience_role"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />


        <TextView
            android:id="@+id/item_role"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="start"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:text="@string/item_experience_period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />


        <TextView
            android:id="@+id/item_period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="start"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/table_background"
        >


        <TextView
            android:text="@string/item_experience_completed_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/table_background"
        >

        <TextView
            android:id="@+id/item_completed_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            android:padding="8dp"
            tools:ignore="MissingPrefix" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:background="@drawable/table_background"
        >


        <TextView
            android:text="@string/item_experience_used_tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/table_background"
        android:layout_marginBottom="8dp"
        >

        <TextView
            android:id="@+id/item_used_tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            android:padding="8dp"
            tools:ignore="MissingPrefix" />

    </LinearLayout>


</LinearLayout>

</androidx.cardview.widget.CardView>